--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ APP_SECRET=3155cbff897ca2cfd5a4bfa10e18f1cc
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="postgresql://app:shroomer@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL=mysql://${MYSQL_USER:-app}:${MYSQL_PASSWORD:-changethispassword}@database:3306/${MYSQL_DATABASE:-app}?serverVersion=${MYSQL_VERSION:-8}&charset=${MYSQL_CHARSET:-utf8mb4}
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
