--- a/composer.json
+++ b/composer.json
@@ -84,9 +84,11 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.6",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "7.1.*",
         "symfony/css-selector": "7.1.*",
+        "symfony/http-client": "7.1.*",
         "symfony/phpunit-bridge": "^7.1"
     }
 }
