--- a/compose.yaml
+++ b/compose.yaml
@@ -55,6 +55,14 @@ services:
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
+  node:
+    image: node:lts-alpine
+    tty: true
+    working_dir: /app
+    depends_on:
+      - php
+    volumes:
+      - ./:/app
 
 volumes:
   caddy_data:
