--- a/compose.yaml
+++ b/compose.yaml
@@ -62,7 +62,7 @@ services:
     depends_on:
       - php
     volumes:
-      - ./:/app
+      - ./shroomer-front:/app
     ports:
       - 5173:5173
 
