--- a/shroomer-front/package.json
+++ b/shroomer-front/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@types/qs": "^6.9.18",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "pinia": "^2.3.1",
     "qs": "^6.14.0",
