--- a/shroomer-front/package.json
+++ b/shroomer-front/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
@@ -14,11 +13,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.6",
     "@types/qs": "^6.9.18",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "pinia": "^2.3.1",
     "qs": "^6.14.0",
+    "tailwindcss": "^4.0.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
